--- a/farmersmaket/src/app/farmer/orders/orders.component.html
+++ b/farmersmaket/src/app/farmer/orders/orders.component.html
@@ -1,47 +1,97 @@
 
 <app-farmer-header></app-farmer-header>
 
-      <!--====== SLIDER PART START ======-->
-   
-      <section id="home" class="slider-area pt-200">
-        <div class="container-fluid position-relative">
-            <div class="slider-active">
-               
-                <div class="single-slider">
-                        <div class="slider-bg">
-                            <table class="table table-striped">
-                                <thead>
-                                  <tr>
-                                    <th scope="col">#</th>
-                                    <th scope="col">First</th>
-                                    <th scope="col">Last</th>
-                                    <th scope="col">Handle</th>
-                                  </tr>
-                                </thead>
-                                <tbody>
-                                  <tr *ngFor="let order of orderProducts">
-                                    <th scope="row">1</th>
-                                    <td>{{order.status}}</td>
-                                    <td>Otto</td>
-                                    <td>@mdo</td>
-                                  </tr>
-                                  <tr>
-                                    <th scope="row">2</th>
-                                    <td>Jacob</td>
-                                    <td>Thornton</td>
-                                    <td>@fat</td>
-                                  </tr>
-                                  <tr>
-                                    <th scope="row">3</th>
-                                    <td>Larry</td>
-                                    <td>the Bird</td>
-                                    <td>@twitter</td>
-                                  </tr>
-                                </tbody>
-                              </table>
-                        </div> <!-- container -->
-                </div> <!-- single slider -->
-            </div> <!-- slider active -->
+<section id="contact" class="contact-area pt-115 mt-100">
+  <div class="container">
 
-        </div> <!-- container fluid -->
-    </section>
+    <div class="contact-box mt-70" *ngFor="let order of orderProducts">
+      <div class="row">
+        <div class="col-lg-4" id="order">
+          <div class="contact-info pt-20">
+            <h4 class="" >Order <a style="color: red;">{{order.status}}</a></h4>
+            <hr>
+            <ul>
+              <li>
+                <div class="single-info mt-30">                
+                  Order Id:
+                  <br />
+                  <div class="info-content">
+                    <p>{{order._id}}</p>
+                  </div>
+                </div> <!-- single info -->
+              </li>
+              <li>
+                <div class="single-info mt-30">                
+                    Order Date:
+                  <br />
+                  <div class="info-content">
+                    <p>{{order.order_date}}</p>
+                  </div>
+                </div> <!-- single info -->
+              </li>
+              <li>
+                <div class="single-info mt-30">               
+                   Customer E-mail:
+                  <br />
+                  <div class="info-content">
+                    <p>{{order.customer_email}}</p>
+                  </div>
+                </div> <!-- single info -->
+              </li>
+              <li>
+                <div class="single-info mt-30">            
+                    Total Price:
+                  <br />
+                  <div class="info-content">
+                    <p>{{order.total_price}}</p>
+                  </div>
+                </div> <!-- single info -->
+              </li>
+            </ul><hr>
+            <div class="col-lg-12">          
+              
+                <button class="btn btn-warning"  type="submit" (click)="submitUpdateReady(order._id,order.customer_email)">Ready&E-mail</button>
+                <button class="btn btn-success"  type="submit" (click)="submitUpdateComplete(order._id)">Complete</button>
+                
+              <!-- udate status form -->
+            </div>
+            </div>
+            
+        </div>
+        <div class="col-lg-8">
+          <div class="contact-form">
+            <div class="single-slider">
+              <div class="slider-bg">
+                <table class="table table-striped">
+                  <thead>
+                    <tr>
+                      <th scope="col">#</th>
+                      <th scope="col">Product Name</th>
+                      <th scope="col">Quantity</th>
+                      <th scope="col">Unit</th>
+                      <th scope="col">Unit Price</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let product of order.products">
+                      <th scope="row">1</th>
+                      <td>{{product.product_name}}</td>
+                      <td>{{product.unit}}</td>
+                      <td>{{product.unit_price}}</td>
+                      <td>{{product.quantity}}</td>
+                    </tr>
+      
+                  </tbody>
+                </table>
+              </div>
+            </div>
+
+          </div> <!-- row -->
+        </div>
+      </div> <!-- row -->
+    </div>
+
+
+
+  </div> <!-- container -->
+</section>
