--- a/farmersmaket/src/app/customer/order-history/order-history.component.html
+++ b/farmersmaket/src/app/customer/order-history/order-history.component.html
@@ -18,7 +18,7 @@
                           <div class="">
                               <select class="form-control form-control-md" id="statusSelect"
                                   required="required" name="status" style="height: 56px;" formControlName="status">
-                                  <option selected>All Status</option>
+                                  <option selected>all</option>
                                   <option>pending</option>
                                   <option>ready</option>
                                   <option>completed</option>
@@ -71,9 +71,9 @@
     <div class="row justify-content-center">
       <div class="col-lg-12">
         <div class="contact-title text-center">
-          <h2 class="info-title" *ngIf="checkOrders() else no_orders">{{status}} order history</h2>
-          <ng-template #no_orders><h2 class="info-content">No Orders Available</h2></ng-template>
-          <h2 class="info-content" *ngIf="checkOrders()">from {{toDate}} to {{fromDate}} </h2>
+          <h2 class="info-title" *ngIf="checkOrders() else no_orders">{{message}}</h2>
+          <ng-template #no_orders><h2 class="info-content">{{noOrderMsg}}</h2></ng-template>
+          <h2 class="info-content" *ngIf="checkOrders()">from {{fromDate}} to {{toDate}} </h2>
         </div> <!-- contact title -->
       </div>
     </div> <!-- row -->
