--- a/farmersmaket/src/app/customer/home/customerhome.component.html
+++ b/farmersmaket/src/app/customer/home/customerhome.component.html
@@ -1,46 +1,101 @@
 
   <app-header-customer></app-header-customer>
-      <!--====== SLIDER PART START ======-->
-    
-      <section id="home" class="slider-area pt-200">
-        <div class="container-fluid position-relative">
-            <div class="slider-active">
-               
-                <div class="single-slider">
-                        <div class="slider-bg">
-                            <table class="table table-striped">
-                                <thead>
-                                  <tr>
-                                    <th scope="col">#</th>
-                                    <th scope="col">First</th>
-                                    <th scope="col">Last</th>
-                                    <th scope="col">Handle</th>
-                                  </tr>
-                                </thead>
-                                <tbody>
-                                  <tr>
-                                    <th scope="row">1</th>
-                                    <td>Mark</td>
-                                    <td>Otto</td>
-                                    <td>@mdo</td>
-                                  </tr>
-                                  <tr>
-                                    <th scope="row">2</th>
-                                    <td>Jacob</td>
-                                    <td>Thornton</td>
-                                    <td>@fat</td>
-                                  </tr>
-                                  <tr>
-                                    <th scope="row">3</th>
-                                    <td>Larry</td>
-                                    <td>the Bird</td>
-                                    <td>@twitter</td>
-                                  </tr>
-                                </tbody>
-                              </table>
-                        </div> <!-- container -->
-                </div> <!-- single slider -->
-            </div> <!-- slider active -->
-
-        </div> <!-- container fluid -->
-    </section>
+  <section id="contact" class="contact-area pt-200">
+    <div class="container">
+      <!-- row -->
+  
+  
+  
+  </div>
+  <!-- container -->
+  </section>
+  
+  <section id="contact" class="contact-area pt-25 ">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-12">
+          <div class="contact-title text-center">
+            <h2 class="info-title" *ngIf="">Message</h2>
+            <ng-template #no_orders><h2 class="info-content">No Farmers</h2></ng-template>
+            <h2 class="info-content" >Available Farmers</h2>
+          </div> <!-- contact title -->
+        </div>
+      </div> <!-- row -->
+  
+      <div class="contact-box mt-70" >
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="contact-info pt-25">
+              <h4 class="info-title">Farmer Name</h4>
+              <h6 class="info-content">Order.id</h6>
+              <ul>
+                <li>
+                  <div class="single-info mt-30">
+                    <div class="info-title">
+                      Order Date:
+                    </div><br />
+                    <div class="info-content">
+                      <p>my orders</p>
+                    </div>
+                  </div> <!-- single info -->
+                </li>
+                <li>
+                  <div class="single-info mt-30">
+                    <div class="info-title">
+                      Farmer Id:
+                    </div><br />
+                    <div class="info-content">
+                      <p>this is farmer id</p>
+                    </div>
+                  </div> <!-- single info -->
+                </li>
+                <li>
+                  <div class="single-info mt-30">
+                    <div class="info-title">
+                      Total Price:
+                    </div><br />
+                    <div class="info-content">
+                      <p>this is total price</p>
+                    </div>
+                  </div> <!-- single info -->
+                </li>
+              </ul>
+            </div> <!-- contact info -->
+          </div>
+          <div class="col-lg-8">
+            <div class="contact-form">
+              <div class="single-slider">
+                <div class="slider-bg">
+                  <table class="table table-striped">
+                    <thead>
+                      <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Product Name</th>
+                        <th scope="col">Quantity</th>
+                        <th scope="col">Unit</th>
+                        <th scope="col">Unit Price</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr >
+                        <th scope="row">row</th>
+                        <td>product name</td>
+                        <td>product unit</td>
+                        <td>product unitprice</td>
+                        <td>product quantity</td>
+                      </tr>
+        
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+  
+            </div> <!-- row -->
+          </div>
+        </div> <!-- row -->
+      </div>
+  
+  
+  
+    </div> <!-- container -->
+  </section>
