--- a/farmersmaket/src/app/farmer/orders/orders.component.html
+++ b/farmersmaket/src/app/farmer/orders/orders.component.html
@@ -4,40 +4,46 @@
 <section id="contact" class="contact-area pt-115 mt-100">
   <div class="container">
     <div class="contact-box">
-      <h3>
-        <form>
-          <input
-            type="radio"
-            name="filterStatus"
-            value="Pending"
-            (change)="filterByStatus($event)"
-            checked
-          />
-          Pending
-          <input
-            type="radio"
-            name="filterStatus"
-            value="Ready"
-            (change)="filterByStatus($event)"
-          />
-          Ready
-          <input
-            type="radio"
-            name="filterStatus"
-            value="Complete"
-            (change)="filterByStatus($event)"
-          />
-          Complete
-        </form>
-      </h3>
-     </div>
-              <!-- row -->   
-      <!-- row -->
+      <div class="row">
+          <div class="col-lg-12">
+              <div class="contact-form">
+    
+                  <form [formGroup]="ordersQueryForm" (ngSubmit)="onSearch()">
+    
+                      <div class="row">
+    
+                          <div class="col-lg-12">
 
-      
+                            <input type="radio" formControlName="status"value="pending"(change)="onSearch()"checked />Pending
+                            <input type="radio"formControlName="status"value="ready"(change)="onSearch()"/>Ready
+                            <input type="radio"formControlName="status"value="completed"(change)="onSearch()"/> Complete
+                              
+                              
+                              <!-- single form -->
+                          </div>
+                          
+                          <p class="form-message"></p>
+                         
+                      </div>
+                      <!-- row -->
+                  </form>
+              </div>
+              <!-- row -->
+          </div>
+      </div>
+      <!-- row -->
+    </div>
+    <!-- SEARCH BOX -->
+    <div class="row justify-content-center">
+      <div class="col-lg-12">
+        <div class="contact-title text-center">
+          <h2 class="info-title">{{message}}</h2>
+        </div> <!-- contact title -->
+      </div>
+    </div> 
 
    
-    <div class="contact-box mt-70" *ngFor="let order of orderProducts">
+    <div class="contact-box mt-70" *ngFor="let order of orders">
       <div class="row">
         <div class="col-lg-4" id="order">
           <div class="contact-info pt-20">
@@ -84,7 +90,8 @@
             <div class="col-lg-12">          
               
                 <button class="btn btn-warning"  type="submit" (click)="submitUpdateReady(order._id,order.customer_email)">Ready&E-mail</button>
-                <button class="btn btn-success"  type="submit" (click)="submitUpdateComplete(order._id)">Complete</button>
+                <button class="btn btn-success"  type="submit" (click)="submitUpdateCompleted(order._id)">Complete</button>
+                
                 
               <!-- udate status form -->
             </div>
