--- a/farmersmaket/src/app/farmer/header-farmer/header-farmer.component.html
+++ b/farmersmaket/src/app/farmer/header-farmer/header-farmer.component.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <nav class="navbar navbar-expand-lg">
-                    <a class="navbar-brand" routerLink="/farmer">
+                    <a class="navbar-brand" routerLink="/farmers">
                         <img src="assets/images/logo.png" alt="Logo" class="logo-size">
                     </a> <!-- Logo -->
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
