--- a/farmersmaket/src/app/customer/header-customer/header-customer.component.html
+++ b/farmersmaket/src/app/customer/header-customer/header-customer.component.html
@@ -17,13 +17,13 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul id="nav" class="navbar-nav ml-auto">
                             <li class="nav-item active">
-                                <a  [routerLink]="['/customers/farmers']">Farmers</a>
+                                <a  [routerLink]="['/customers/farmers']">Shop</a>
                             </li>
                             <li class="nav-item">
                                 <a [routerLink]="['/customers/orders']">Order History</a>
                             </li>
                             <li class="nav-item">
-                                <a [routerLink]="['/customers/shoppingcart']">Shopping Cart</a>
+                                <a [routerLink]="['/customers/shoppingcart']">Checkout</a>
                             </li>
                         </ul> <!-- navbar nav -->
                     </div>
